Fixed the join css, (minor issue where the navbar has a white background behind it after scrolling down)

--- a/client/src/components/container/Container.css
+++ b/client/src/components/container/Container.css
@@ -18,3 +18,10 @@
 	margin: 30px 5px;
 	font-family: 'Montserrat', sans-serif;
 }
+
+.joinContent {
+	font-size: 1.5rem;
+	/* font-weight: 700; */
+	margin: 15% 5px;
+	font-family: 'Montserrat', sans-serif;
+}
